# EcoRE

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  meson.build  newsyntax.eco  shell.nix
src/: .gitignore  Makefile  eco.c  eco.h  main.c  meson.build
src/apps/: coresampler.ea  menu.ea  test.ea  tools.ea
src/archive/ecorevx/util/: libc.h  memory.h
src/archive/polymorphic/core/: MorphActionNode.eco  _.eco
src/archive/polymorphic/misc/: _.eco
src/base/bootstrapper/ecosphere/: bootstrapper.py  vm.py
src/base/ecore/: Makefile  eco.c  eco.h  main.c
src/base/ecore/base/: any.h  defs.h  extra.h
src/base/ecore/objects/: objects.c
src/base/ecore/util/: libc.c  libc.h  memory.h  utf8.c
src/base/ecore/vm/: scheduler.c  vm.c  vm.h
src/base/ecorevx/: Makefile
src/base/ecorevx/core/: any.h
src/base/eve/: .gitignore  Makefile  eve.c  eve.h
src/base/pyeco/: Makefile  pyeco.c  pyeco.h
src/bootstrap/bootstrapper/ecosphere/: bootstrapper.py
src/bootstrap/env_test/: Makefile  master.eco  sub.eco  sub_v2.eco  test_v2.eco
src/bootstrap/lisp/: eco.lisp
src/bootstrap/lisp/parser/: master.lisp  parser.lisp  tokenizer.lisp
src/bootstrap/py/: ast.py  bootstrapper.py  compiler.py  datatypes.py  econnect.py  parser.py  test.py
src/bootstrap/py/compiler/: base.py  codegenerator.py  scope.py  storage.py  visitor.py
src/bootstrap/py/ecosphere/: bootstrap.sh  bootstrapper.py  econnect.py
src/bootstrap/py/parser/: ast.py  core.py  parser.py  parsers.py  stream.py  tokens.py
src/bootstrap/py2/ecosphere/: bootstrapper.py  econnect.py
src/bootstrapper/ecosphere/: bootstrapper.py  econnect.py  vm.py
src/bootstrapper/ecosphere/compiler/: __init__.py  codegen.py  scopes.py  storage.py  visitors.py
src/bootstrapper/ecosphere/objects/: base.py  interface.py  misc.py  plain.py
src/bootstrapper/ecosphere/parser/: ast.py  parser.py  stream.py  tokenizer.py
src/eco/apps/: coresampler.ea  finalization-test.ea  menu.ea  themes.ea
src/eco/apps/eve/: _.eco
src/eco/apps/exporter/: _.eco  econnect.eco
src/eco/apps/garbage/: bin.ea
src/eco/apps/paper/: _.eco
src/eco/apps/playground/: color-picker.ea  finalization-test.ea  test.ea
src/eco/apps/polymorphic/: _.eco
src/eco/apps/test/: presentation.ea  presentation.eco
src/eco/lib/: .gitignore  Makefile  interfaces.eco  interfaces.eco.old  master.eco
src/eco/lib/lang/: _.eco
src/eco/lib/std/: _.eco  bool.eco  classlike.eco  clonable.eco  defaultbehavior.eco  enum.eco  globals.eco  maybe.eco  module.eco  modules.eco  singleton.eco  switch.eco  trait.eco  try.eco
src/eco/modules/: _.eco  lib.eco
src/eco/modules/app/: _.eco  bootstrap.eco
src/eco/modules/document/: _.eco
src/eco/modules/gfx/: _.eco
src/eco/modules/math/: _.eco
src/eco/modules/mold/: Concept.eco  _.eco
src/eco/modules/os/: env.eco
src/eco/modules/system/: _.eco
src/eco/snippets/: app_1.eco  app_2.eco  classes.eco  guiapp.eco  interfaces.eco  new_compiler.eco  optimizer-inline.eco  optimizer-test.eco  polymorphic-presentation.eco  polymorphic.eco  polymorphic2.eco  polymorphic2_1.eco  polymorphic2_2.eco  polymorphic2_3.eco  sdltest.eco
src/eco/snippets/a/: types.eco
src/ecore/: Makefile  eco.c  eco.h  extra.h  main.c
src/ecore/base/: any.h  config.h  decls.h  defs.h  extra.h
src/ecore/io/econnect/: callback.c  callback.h  econnect.c  econnect.h  instance.c  instance.h  parser.c  parser.h  reader.c  reader.h  result.c  result.h
src/ecore/io/logging/: log.c  log.h
src/ecore/io/net/: net.h  scheduler.c  scheduler.h  socket.c  socket.h
src/ecore/io/streams/: bytestream.h
src/ecore/memory/: memory.c
src/ecore/objects/: closure.c  closure.h  code.c  code.h  group.c  key.c  key.h  object.c  object.h  objects.c  objects.h  type.c  type.h
src/ecore/objects/base/: builtin.h  molecule.h  object.c  object.h  object_payload.c  object_payload.h  object_slots.c  object_slots.h  slot.h  slot_info.h  type.c  type.h  type_transfer.c  type_transfer.h  typecore.c  typecore.h
src/ecore/objects/ffi/: ffifunc.h  (+2 more)
src/ecore/util/: gz.c  libc.c  libc.h  memory.c  memory.h  utf8.c  utf8.h
src/ecore/utils/: string.h
src/ecore/vm/: fiber.c  fiber.h  fiber_sched.c  fiber_sched.h  fiber_states.h  scheduler.c  scheduler.h  vm.c  vm.h
src/ecorevx/: Makefile  ecore.h
src/ecorevx/base/: config.h  defs.h
src/ecorevx/core/: core.h
src/ecorevx/util/: libc.c  memory.c  memory.h
src/eve/: Makefile  eve.c  eve.h
src/io/econnect/: callback.c  callback.h  callback_def.h  connection.c  connection.h  econnect.c  econnect.h  instance.c  parser.c  parser.h  reader.c  reader.h
src/io/net/: net.c  net.h  sched.c  sched.h  scheduler.c  scheduler.h  sockets.c  sockets.h  test.c  test.h
src/io/streams/: bytestream.h  string_stream.h
src/lib/: Makefile  base.eco  init.eco  interfaces.eco  master.eco
src/lib/ecosphere/: _.eco
src/lib/lang/: lang.eco
src/lib/std/: _.eco  bool.eco  clonable.eco  defaultbehavior.eco  globals.eco  io.eco  ioutil.eco  lens.eco  maybe.eco  module.eco  modules.eco  reflect.eco  singleton.eco  std.eco  trait.eco  util.eco
src/lib/testing/: _.eco  test.eco
src/modules/: gui.eco  lib.eco
src/modules/document/: Document.eco  _.eco
src/modules/ecosphere/: _.eco  dataflow.eco
src/modules/gfx/: _.eco
src/modules/io/: terminal.eco
src/modules/math/: vec2.eco
src/modules/sdl/: _.eco
src/objects/: closure.c  closure.h  code.c  group.c  group.h  key.c  key.h  object.c  object.h  type.c  type.h
src/snippets/: disassembler.eco  inputiterator.eco  interfaces.eco  intparser.eco  optimizer-test.eco  pathlib.eco  sdltest.eco  someobject.eco  start_ui.eco  switch.eco  ui-test.eco  walker.eco
src/tests/: hello.ebf  object.ebf
src/vm/: bytecodes.h  code.h  environment.c  environment.h  fiber.c  fiber.h  fiber_states.h  frame.c  frame.h  interpreter.c  interpreter.h  memory.c  memory.h  send.c  send.h  vm.c  vm.h
src/vm/core/: bytecodes.h  environment.c  environment.h  frame.c  frame.h  interpreter.c  interpreter.h  send.c
src/vm/memory/: gc.c  gc.h  gc_state.c  gc_state.h  memory.c  memory.h
(+1257 files in other folders)
