project('EcoRE', 'c')

src = [
    './src/ecore/util/memory.c',
    './src/ecore/util/utf8.c',
    './src/ecore/util/gz.c',
    './src/ecore/objects/misc/key/key.c',
    './src/ecore/objects/misc/blob/blob.c',
    './src/ecore/objects/misc/string/string.c',
    './src/ecore/objects/misc/array/array.c',
    './src/ecore/objects/pseudo/float.c',
    './src/ecore/objects/pseudo/character.c',
    './src/ecore/objects/pseudo/integer.c',
    './src/ecore/objects/vm/code/closure.c',
    './src/ecore/objects/vm/code/code.c',
    './src/ecore/objects/vm/interface/interface.c',
    './src/ecore/objects/vm/ffi/ffitype.c',
    './src/ecore/objects/vm/ffi/ffiobject.c',
    './src/ecore/objects/vm/ffi/ffifunc.c',
    './src/ecore/objects/objects.c',
    './src/ecore/objects/base/object/gc.c',
    './src/ecore/objects/base/object/send.c',
    './src/ecore/objects/base/object/object.c',
    './src/ecore/objects/base/type_transfer.c',
    './src/ecore/objects/base/type/typecore.c',
    './src/ecore/objects/base/type/slot_info.c',
    './src/ecore/objects/base/type/type.c',
    './src/ecore/objects/base/type/gc.c',
    './src/ecore/objects/base/type/interface.c',
    './src/ecore/objects/base/type/slot.c',
    './src/ecore/objects/base/type/copying.c',
    './src/ecore/objects/base/type/sending.c',
    './src/ecore/objects/base/molecule/object_payload.c',
    './src/ecore/objects/base/molecule/molecule.c',
    './src/ecore/objects/base/molecule/object_slots.c',
    './src/ecore/eco.c',
    './src/ecore/vm/fiber/gc.c',
    './src/ecore/vm/fiber/fiber.c',
    './src/ecore/vm/fiber/sched.c',
    './src/ecore/vm/fiber/stackops.c',
    './src/ecore/vm/core/interpreter.c',
    './src/ecore/vm/core/frame.c',
    './src/ecore/vm/core/send.c',
    './src/ecore/vm/core/clone.c',
    './src/ecore/vm/vm.c',
    './src/ecore/vm/memory/memory.c',
    './src/ecore/vm/memory/arena.c',
    './src/ecore/vm/memory/gc/gc_state.c',
    './src/ecore/vm/memory/gc/gc.c',
    './src/ecore/vm/scheduler.c',
    './src/ecore/vm/builtins/core/io.c',
    './src/ecore/vm/builtins/core/blob.c',
    './src/ecore/vm/builtins/core/flow.c',
    './src/ecore/vm/builtins/core/slots.c',
    './src/ecore/vm/builtins/core/ffi.c',
    './src/ecore/vm/builtins/core/math.c',
    './src/ecore/vm/builtins/core/string.c',
    './src/ecore/vm/builtins/core/code.c',
    './src/ecore/vm/builtins/core/array.c',
    './src/ecore/vm/builtins/core/reflection.c',
    './src/ecore/vm/builtins/core/is.c',
    './src/ecore/vm/builtins/core/clone.c',
    './src/ecore/vm/builtins/core/key.c',
    './src/ecore/vm/builtins/core/init.c',
    './src/ecore/vm/builtins/builtins.c',
    './src/ecore/main.c',
    './src/ecore/io/logging/log.c',
    './src/ecore/io/econnect/instance.c',
    './src/ecore/io/econnect/file/file.c',
    './src/ecore/io/econnect/reader/parser.c',
    './src/ecore/io/econnect/reader/callback.c',
    './src/ecore/io/econnect/reader/builtins/flow/flow.c',
    './src/ecore/io/econnect/reader/builtins/protocol/protocol.c',
    './src/ecore/io/econnect/reader/builtins/compression/gz.c',
    './src/ecore/io/econnect/reader/builtins/objects/string.c',
    './src/ecore/io/econnect/reader/builtins/objects/code.c',
    './src/ecore/io/econnect/reader/builtins/objects/array.c',
    './src/ecore/io/econnect/reader/builtins/objects/ints.c',
    './src/ecore/io/econnect/reader/builtins/objects/interface.c',
    './src/ecore/io/econnect/reader/builtins/objects/object_body.c',
    './src/ecore/io/econnect/reader/builtins/objects/object.c',
    './src/ecore/io/econnect/reader/builtins/objects/key.c',
    './src/ecore/io/econnect/reader/builtins/builtins.c',
    './src/ecore/io/econnect/reader/builtins/id/id.c',
    './src/ecore/io/econnect/reader/reader.c',
    './src/ecore/io/econnect/reader/result.c',
    './src/ecore/io/econnect/econnect.c'
]

includes = include_directories('src')

cc = meson.get_compiler('c')

math = cc.find_library('m')
dl = cc.find_library('dl')
zlib = dependency('zlib')
libffi = dependency('libffi')

executable('ecore.app', sources: src,
                        include_directories : includes,
                        dependencies : [math, dl, zlib, libffi])
