project('EcoRE', 'c')

src = [
    './ecore/util/memory.c',
    './ecore/util/utf8.c',
    './ecore/util/gz.c',
    './ecore/objects/misc/key/key.c',
    './ecore/objects/misc/blob/blob.c',
    './ecore/objects/misc/string/string.c',
    './ecore/objects/misc/array/array.c',
    './ecore/objects/pseudo/float.c',
    './ecore/objects/pseudo/character.c',
    './ecore/objects/pseudo/integer.c',
    './ecore/objects/vm/code/closure.c',
    './ecore/objects/vm/code/code.c',
    './ecore/objects/vm/interface/interface.c',
    './ecore/objects/vm/ffi/ffitype.c',
    './ecore/objects/vm/ffi/ffiobject.c',
    './ecore/objects/vm/ffi/ffifunc.c',
    './ecore/objects/objects.c',
    './ecore/objects/base/object/gc.c',
    './ecore/objects/base/object/send.c',
    './ecore/objects/base/object/object.c',
    './ecore/objects/base/type_transfer.c',
    './ecore/objects/base/type/typecore.c',
    './ecore/objects/base/type/slot_info.c',
    './ecore/objects/base/type/type.c',
    './ecore/objects/base/type/gc.c',
    './ecore/objects/base/type/interface.c',
    './ecore/objects/base/type/slot.c',
    './ecore/objects/base/type/copying.c',
    './ecore/objects/base/type/sending.c',
    './ecore/objects/base/molecule/object_payload.c',
    './ecore/objects/base/molecule/molecule.c',
    './ecore/objects/base/molecule/object_slots.c',
    './ecore/eco.c',
    './ecore/vm/fiber/gc.c',
    './ecore/vm/fiber/fiber.c',
    './ecore/vm/fiber/sched.c',
    './ecore/vm/fiber/stackops.c',
    './ecore/vm/core/interpreter.c',
    './ecore/vm/core/frame.c',
    './ecore/vm/core/send.c',
    './ecore/vm/core/clone.c',
    './ecore/vm/vm.c',
    './ecore/vm/memory/memory.c',
    './ecore/vm/memory/arena.c',
    './ecore/vm/memory/gc/gc_state.c',
    './ecore/vm/memory/gc/gc.c',
    './ecore/vm/scheduler.c',
    './ecore/vm/builtins/core/io.c',
    './ecore/vm/builtins/core/blob.c',
    './ecore/vm/builtins/core/flow.c',
    './ecore/vm/builtins/core/slots.c',
    './ecore/vm/builtins/core/ffi.c',
    './ecore/vm/builtins/core/math.c',
    './ecore/vm/builtins/core/string.c',
    './ecore/vm/builtins/core/code.c',
    './ecore/vm/builtins/core/array.c',
    './ecore/vm/builtins/core/reflection.c',
    './ecore/vm/builtins/core/is.c',
    './ecore/vm/builtins/core/clone.c',
    './ecore/vm/builtins/core/key.c',
    './ecore/vm/builtins/core/init.c',
    './ecore/vm/builtins/builtins.c',
    './ecore/main.c',
    './ecore/io/logging/log.c',
    './ecore/io/econnect/instance.c',
    './ecore/io/econnect/file/file.c',
    './ecore/io/econnect/reader/parser.c',
    './ecore/io/econnect/reader/callback.c',
    './ecore/io/econnect/reader/builtins/flow/flow.c',
    './ecore/io/econnect/reader/builtins/protocol/protocol.c',
    './ecore/io/econnect/reader/builtins/compression/gz.c',
    './ecore/io/econnect/reader/builtins/objects/string.c',
    './ecore/io/econnect/reader/builtins/objects/code.c',
    './ecore/io/econnect/reader/builtins/objects/array.c',
    './ecore/io/econnect/reader/builtins/objects/ints.c',
    './ecore/io/econnect/reader/builtins/objects/interface.c',
    './ecore/io/econnect/reader/builtins/objects/object_body.c',
    './ecore/io/econnect/reader/builtins/objects/object.c',
    './ecore/io/econnect/reader/builtins/objects/key.c',
    './ecore/io/econnect/reader/builtins/builtins.c',
    './ecore/io/econnect/reader/builtins/id/id.c',
    './ecore/io/econnect/reader/reader.c',
    './ecore/io/econnect/reader/result.c',
    './ecore/io/econnect/econnect.c'
]

includes = include_directories('.')

cc = meson.get_compiler('c')

math = cc.find_library('m')
dl = cc.find_library('dl')
zlib = dependency('zlib')
libffi = dependency('libffi')

executable('ecore.app', sources: src,
                        include_directories : includes,
                        dependencies : [math, dl, zlib, libffi])
